--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="js/renderers/CanvasRenderer.js"></script>
     <script src="js/libs/OBJLoader.js"></script>
     <script src="js/libs/MTLLoader.js"></script>
+    <script src="js/libs/GLTFLoader.js"></script>
     <script src="js/libs/GPUParticleSystem.js"></script>
     <script src="js/libs/FirstPersonControls.js"></script>
     <script src="js/index.js"></script>
