--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="prompt">
         <h3>Solar System</h3>
         <a id="control" href="#" class="progress">Start</a>
+        <a id="tour" href="#" class="progress">Tour</a>
     </div>
 </div>
 
