--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
         </div>
         <div id="info-content">
             <p><strong>Radius:</strong> <span id="celestial-radius"></span> km</p>
-            <p><strong>Orbit Period:</strong> <span id="celestial-orbit"></span> hours</p>
-            <p><strong>Rotation Period:</strong> <span id="celestial-rotation"></span> hours</p>
+            <p><strong>Mass:</strong> <span id="celestial-mass"></span> kg</p>
+            <p><strong>Surface Temperature:</strong> <span id="celestial-temperature"></span> °C</p>
+            <p><strong>Distance from Sun:</strong> <span id="celestial-distance-sun"></span> km</p>
+            <p><strong>Distance from Parent:</strong> <span id="celestial-distance-parent"></span> km</p>
+            <p><strong>Axial Tilt:</strong> <span id="celestial-axial-tilt"></span> degrees</p>
+            <p><strong>Surface Gravity:</strong> <span id="celestial-gravity"></span>  m/s²</p>
+            <p><strong>Orbit Period:</strong> <span id="celestial-orbit"></span> days</p>
+            <p><strong>Rotation Period:</strong> <span id="celestial-rotation"></span> days</p>
             <p><strong>Parent:</strong> <span id="celestial-parent"></span></p>
-            <p><strong>Atmosphere:</strong> <span id="celestial-atmosphere"></span></p>
-            <p><strong>Rings:</strong> <span id="celestial-rings"></span></p>
             <p><strong>Description:</strong> <span id="celestial-description"></span></p>
         </div>
     </div>
